# azcam-lbtguiders

./: README.md  pyproject.toml  readme.md  requirements-github.txt  requirements.txt  requirements_github.txt  setup.cfg
azcam_lbtguiders/: LBTCommandParser.py  __init__.py  cli_commands.py  console.py  console_lbtguiders.py  gcs.py  index_lbtguiders.html  lbtguiders_configuration.txt  lbtguiders_configuration_DESKTOP-OMPL2IU.txt  sendimage_lbtguiders.py  server.py  server_lbtguiders.py
azcam_lbtguiders/dspcode/dsppci/: pci3boot.ls
azcam_lbtguiders/dspcode/dsptiming/agw1g/: pq_3123_mpp.asm  tim3.asm
azcam_lbtguiders/dspcode/dsptiming/agw1w/: tim3.ls  tim3_hdr.asm  tim3_host.bat
azcam_lbtguiders/dspcode/dsptiming/agw2g/: s_12_123n.asm  tim3.ls  tim3_host.bat  waveforms.asm
azcam_lbtguiders/dspcode/dsptiming/agw2w_28feb14/: tim3.ls
azcam_lbtguiders/dspcode/dsptiming/agw3g/: gcam_ccd57.ls
azcam_lbtguiders/dspcode/dsptiming/agw5g/: tim3.ls
azcam_lbtguiders/dspcode/dsptiming/agw5g_28feb14/: p_3123_mpp.asm  tim3.lod  tim3_rdccd.asm
azcam_lbtguiders/dspcode/dsptiming/agw5w/: waveforms.asm
azcam_lbtguiders/dspcode/dsptiming/agw5w_28feb14/: waveforms.asm
azcam_lbtguiders/dspcode/dsptiming/agw6g/: tim3_misc.asm
azcam_lbtguiders/dspcode/dsptiming/agw6g_21apr14/: tim3_boot.asm
azcam_lbtguiders/dspcode/dsptiming/agw6w/: dacs.asm  tim3.lod
azcam_lbtguiders/dspcode/dsputility/: util3.ls  utilboot3.ls
datafolder/parameters/: parameters_console_lbtguiders.ini  parameters_server_lbtguiders.ini
docs/: AzCamArchitecture_LBTO_Guiders.vsd  LBT Guiders Misc.docx  install notes.txt  install_notes.md  notes.txt
support/: install.py  install_azcam.bat  linux_python.txt  parameters_monitor_lbtguiders.ini  start_all_servers.py  start_console.py  start_console_wt.py  start_lbtguiders_logger.py  start_monitor_lbtguiders.bat  start_monitor_lbtguiders.py  start_server.py  start_server_lbtguiders_1g.py  start_server_wt.py
support/OLD/: start_server_all_lbtguiders.bat
support/datafolder/parameters/: parameters_server_lbtguiders.ini
templates/: FitsTemplate_lbtguiders.txt  start_server_lbtguider.bat
tests/: test_lbtguiders.py  testimage.fits
