[tool.poetry]
name = "azcam-lbtguiders"
version = "22.3"
description = "Azcam extension for LBTO lbtguiders cameras"
authors = ["Michael Lesser <mlesser@arizona.edu>"]
license = "LICENSE"
readme = "README.md"
keywords=["ccd", "imaging", "astronomy", "sensors"]
repository = "https://github.com/mplesser/azcam-lbtguiders/"
documentation = "https://mplesser.github.io/azcam/"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
ipython = "*"
PySide2 = "*"
rich = "*"

azcam = "*"
azcam-monitor = "*"
azcam-fastapi = "*"
azcam-arc = "*"
azcam-ds9 = "*"
azcam-imageserver = "*"
azcam-mag = "*"
azcam-webtools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
