[project]
name = "azcam-lbtguiders"
version = "22.3.1"
description = "Azcam extension for LBTO lbtguiders cameras"
license = {file ="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "ipython",
    "rich",
    "azcam",
    "azcam-fastapi",
    "azcam-arc",
    "azcam-ds9",
    "azcam-imageserver",
    "azcam-mag",
    "azcam-webtools",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam-lbtguiders/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_lbtguiders"
